tests/conformance/accept/import-alias/entry.ts
import { makeVal as build } from './a';
console.log(build(21n));
